syntax = "proto3";

package Nebula.Services.Fragments.Inventory;
import "google/protobuf/timestamp.proto";

message ProductRecord {
	string ProductId = 1;
	string OrganizationId = 2;
	string Sku = 3;
	string Name = 4;
	string Description = 5;
	string ImageAssetId = 6;
	string Unit = 7;

	google.protobuf.Timestamp CreatedUTC = 30;
	string CreatedBy = 31;
	google.protobuf.Timestamp LastModifiedUTC = 32;
	string LastModifiedBy = 33;
}